--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "HaroldR23",email = "ahsro99@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.122.0,<0.123.0)",
     "uvicorn[standard] (>=0.38.0,<0.39.0)",
@@ -14,7 +14,8 @@ dependencies = [
     "resend (>=2.19.0,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "slowapi (>=0.1.9,<0.2.0)"
 ]
 
 
