--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,25 @@
-[project]
+[tool.poetry]
 name = "merysu-sparkle-backend"
 version = "0.1.0"
+
 description = ""
 authors = [
-    {name = "HaroldR23",email = "ahsro99@gmail.com"}
+    "HaroldR23 <ahsro99@gmail.com>"
 ]
 readme = "README.md"
-requires-python = ">=3.11,<4.0"
-dependencies = [
-    "fastapi (>=0.122.0,<0.123.0)",
-    "uvicorn[standard] (>=0.38.0,<0.39.0)",
-    "pydantic[email] (>=2.12.5,<3.0.0)",
-    "resend (>=2.19.0,<3.0.0)",
-    "httpx (>=0.28.1,<0.29.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)",
-    "slowapi (>=0.1.9,<0.2.0)"
-]
+
+[tool.poetry.dependencies]
+python = ">=3.11.4,<4.0.0"
+fastapi = ">=0.127.0,<0.128.0"
+uvicorn = ">=0.40.0,<0.41.0"
+pydantic = {extras = ["email"], version = "^2.12.5"}
+resend = ">=2.19.0,<3.0.0"
+httpx = ">=0.28.1,<0.29.0"
+python-dotenv = ">=1.2.1,<2.0.0"
+python-multipart = ">=0.0.21,<0.0.22"
+slowapi = ">=0.1.9,<0.2.0"
+dnspython = "^2.8.0"
+mangum = "^0.19.0"
 
 
 [build-system]
